2018-01-23 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version number to 3.0.1
    * doc/rivet.xml.in,doc/xml/request.xml: wrong links and information
    about MPM support fixed
    * src/mod_rivet_ng/mod_rivet.h: add APLOG_USE_MODULE
    macro
    * src/mod_rivet/ng/rivet_worker_mpm.c: number
    of threads waited on exit by the supervisor was wrong
    and it's now the acutal number of threads available,
    variable uninitalized in loop fixed 

2018-01-23 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/lazybridge.xml: more improvements and
    inclusion of new comments to the code
    * doc/xml/commands.xml: rather cosmetic improvment 
    to the page of ::rivet::try
    * src/mod_rivet_ng/rivet_lazy_mpm.c: more comments

2018-01-19 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/installation.xml: various broken links fixed
    * doc/xml/internals.xml: expanding some explanations and changing
    links to the Apache server from version 2.2 to 2.4
    * doc/xml/lazybridge.xml: expanding code explanations
    * src/mod_rivet_ng/rivet_lazy_mpm.c: commenting code in
    various functions

2018-01-17 Massimo Manghi <mxmanghi@apache.org>
    * : Released as 3.0.0

2018-01-09 Massimo Manghi <mxmanghi@apache.org>
    * tests/virtualhost.test,tests/channel.test: changed
    virtual hosts declarations. Now accepting '*' as host
    name prevents test from failing with certain set ups (a
    DNS related problem)
    * doc/xml/intro.xml: add ackowledgements to George
    * win/: old Windows scripts removed
    * src/mod_rivet: old mod_rivet code removed

2018-01-01 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/: more error checking and several improvements to
    the manual

2017-12-29 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xml.in: more entities to extend documentation
    * doc/xml/intro.xml: introduction revised and extended
    * doc/xml-2: files used to generate the manual removed or
    moved into doc/xml