@@ -12,10 +12,12 @@ package ifneeded AsciiGlyphs 0.1 [list source [file join $dir packages/asciiglyp
 package ifneeded Calendar 1.2 [list source [file join $dir packages/calendar/calendar.tcl]]
 package ifneeded DIO 1.1 [list source [file join $dir packages/dio/dio.tcl]]
 package ifneeded DIODisplay 1.0 [list source [file join $dir packages/dio/diodisplay.tcl]]
+package ifneeded Dtcl 1.0 [list source [file join $dir packages/dtcl/dtcl.tcl]]
 package ifneeded Rivet 3.0 [list source [file join $dir init.tcl]]
 package ifneeded RivetEntities 1.0 [list source [file join $dir packages/entities/entities.tcl]]
 package ifneeded Session 1.0 [list source [file join $dir packages/session/session-class.tcl]]
-package ifneeded dio_Mysql 0.2 [list source [file join $dir packages/dio/dio_Mysql.tcl]]
+package ifneeded commserver 0.1 [list source [file join $dir packages/commserver/commserver.tcl]]
+package ifneeded dio_Mysql 0.3 [list source [file join $dir packages/dio/dio_Mysql.tcl]]
 package ifneeded dio_Oracle 0.1 [list source [file join $dir packages/dio/dio_Oracle.tcl]]
 package ifneeded dio_Postgresql 0.1 [list source [file join $dir packages/dio/dio_Postgresql.tcl]]
 package ifneeded dio_Sqlite 0.1 [list source [file join $dir packages/dio/dio_Sqlite.tcl]]
@@ -23,7 +25,7 @@ package ifneeded dio_Tdbc 0.1 [list source [file join $dir packages/dio/dio_Tdbc
 package ifneeded form 1.0 [list source [file join $dir packages/form/form.tcl]]
 package ifneeded form 2.1 [list source [file join $dir packages/form/form2.tcl]]
 package ifneeded formbroker 1.0 [list source [file join $dir packages/formbroker/formbroker.tcl]]
-package ifneeded rivetlib 3.0.0 [list load [file join $dir librivetlib[info sharedlibextension]]]
-package ifneeded rivetparser 0.2 [list load [file join $dir librivetparser[info sharedlibextension]]]
+package ifneeded ncgi 1.0 [list source [file join $dir packages/rivet_ncgi/rivet_ncgi.tcl]]
+package ifneeded simpledb 0.1 [list source [file join $dir packages/simpledb/simpledb.tcl]]
 package ifneeded tclrivet 0.1 [list source [file join $dir packages/tclrivet/tclrivet.tcl]]
 package ifneeded tclrivetparser 0.1 [list source [file join $dir packages/tclrivet/tclrivetparser.tcl]]
